demo/k8s/elasticsearchprojections.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-projections
  namespace: wegwijs-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch-projections
  template:
    metadata:
      labels:
        app: elasticsearch-projections
    spec:
      containers:
      - name: elasticsearch-projections
        image: k3d-wegwijs-registry:5051/wegwijs-elasticsearch-projections:local
        imagePullPolicy: Always
