demo/k8s/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: wegwijs-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.2
        imagePullPolicy: IfNotPresent
        args: ["start-dev", "--import-realm", "--hostname-strict=false", "--http-enabled=true"]
        ports:
        - containerPort: 8080
        startupProbe:
          httpGet:
            path: /realms/master
            port: 8080
          periodSeconds: 2
          failureThreshold: 90   # up to 3 minutes to boot
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 10
        volumeMounts:
        - name: realm-import
          mountPath: /opt/keycloak/data/import
      volumes:
      - name: realm-import
        configMap:
          name: keycloak-realm
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: wegwijs-demo
spec:
  selector:
    app: keycloak
  ports:
  - port: 80
    targetPort: 8080
