demo/k8s/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: wegwijs-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: k3d-wegwijs-registry:5051/wegwijs-ui:local
          imagePullPolicy: Always
          ports:
            - containerPort: 9007
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: wegwijs-demo
spec:
  selector:
    app: ui
  ports:
    - port: 80
      targetPort: 9007
